--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
     <div class="container">
         <div class="avatar">
@@ -17,13 +19,19 @@
         </div>
         <div class="content">
             <h1>CodeSpace Cat</h1>
-            <p>Follow me on:</p>
+            <p>Follow me on Youtube:</p>
             <p>
-                <span><a href="https://github.com/CodeSpace-Academy"><img src="./images/icons8-github-96.png" alt="GitHub"></a></span>
-                <span><a href="https://www.linkedin.com/school/codespaceza/"><img src="./images/icons8-linkedin-96.png" alt="LinkedIn"></a></span>
-                <span><a href=""><img src="./images/icons8-codepen-96.png" alt="CodePen"></a></span>
+                <span><a href="https://github.com/CodeSpace-Academy"><img
+                            src="./images/icons8-github-96.png"
+                            alt="GitHub"></a></span>
+                <span><a href="https://www.linkedin.com/school/codespaceza/"><img
+                            src="./images/icons8-linkedin-96.png"
+                            alt="LinkedIn"></a></span>
+                <span><a href=""><img src="./images/icons8-codepen-96.png"
+                            alt="CodePen"></a></span>
             </p>
         </div>
-    </div>    
+    </div>
 </body>
+
 </html>
