added profile pic name and links to profiles

--- a/index.html
+++ b/index.html
@@ -14,20 +14,22 @@
     <div class="container">
         <div class="avatar">
             <a href="">
-                <img src="./images/cat-codespace.png" alt="Skytsunami" />
+                <img src="DSCF9350-1-2.jpg" alt="Skytsunami" />
             </a>
         </div>
         <div class="content">
-            <h1>CodeSpace Cat</h1>
-            <p>Follow me on Youtube:</p>
+            <h1>Tafara Sithole</h1>
+            <p>Follow me on:</p>
             <p>
-                <span><a href="https://github.com/CodeSpace-Academy"><img
+                <span><a href="https://github.com/Taf-s"><img
                             src="./images/icons8-github-96.png"
                             alt="GitHub"></a></span>
-                <span><a href="https://www.linkedin.com/school/codespaceza/"><img
+                <span><a
+                        href="https://www.linkedin.com/in/tafara-sithole-836812206/"><img
                             src="./images/icons8-linkedin-96.png"
                             alt="LinkedIn"></a></span>
-                <span><a href=""><img src="./images/icons8-codepen-96.png"
+                <span><a href="https://codepen.io/Taf-s"><img
+                            src="./images/icons8-codepen-96.png"
                             alt="CodePen"></a></span>
             </p>
         </div>
